@@ -41,7 +41,7 @@ public class TestUndefinedParameters extends TestDatabase {
         criteria.setT_byte((byte) 4);
         criteria.setT_short((short) 5);
         // criteria.setT_float(new Float(6.1));
-        // criteria.setT_double(new Double(7.2));
+        // criteria.setT_double(Double.valueOf(7.2));
         criteria.setT_char(new Character('x'));
         criteria.setT_string("abc");
         criteria.setT_boolean(Boolean.TRUE);
@@ -84,7 +84,7 @@ public class TestUndefinedParameters extends TestDatabase {
         TypesTransport t = list.get(0);
 
         assertEquals(2, t.getN_int());
-        assertEquals(new Integer(2), t.getT_int());
+        assertEquals(Integer.valueOf(2), t.getT_int());
 
         assertEquals(3, t.getN_long());
         assertEquals(Long.valueOf(3L), t.getT_long());
@@ -99,7 +99,7 @@ public class TestUndefinedParameters extends TestDatabase {
         assertEquals(new Float(6.1), t.getT_float(), 0.001);
 
         assertEquals(7.2, t.getN_double(), 0.001);
-        assertEquals(new Double(7.2), t.getT_double(), 0.001);
+        assertEquals(Double.valueOf(7.2), t.getT_double(), 0.001);
 
         assertEquals('x', t.getN_char());
         assertEquals(new Character('x'), t.getT_char());
