@@ -40,7 +40,7 @@ public class TestStandardTypes extends TestDatabase {
         TypesTransport t = list.get(0);
 
         assertEquals(2, t.getN_int());
-        assertEquals(new Integer(2), t.getT_int());
+        assertEquals(Integer.valueOf(2), t.getT_int());
 
         assertEquals(3, t.getN_long());
         assertEquals(Long.valueOf(3L), t.getT_long());
@@ -55,7 +55,7 @@ public class TestStandardTypes extends TestDatabase {
         assertEquals(new Float(6.1), t.getT_float(), 0.001);
 
         assertEquals(7.2, t.getN_double(), 0.001);
-        assertEquals(new Double(7.2), t.getT_double(), 0.001);
+        assertEquals(Double.valueOf(7.2), t.getT_double(), 0.001);
 
         assertEquals('x', t.getN_char());
         assertEquals(new Character('x'), t.getT_char());
@@ -154,7 +154,7 @@ public class TestStandardTypes extends TestDatabase {
         TypesTransport t = list.get(0);
 
         assertEquals(2, t.getN_int());
-        assertEquals(new Integer(2), t.getT_int());
+        assertEquals(Integer.valueOf(2), t.getT_int());
 
         assertEquals(3, t.getN_long());
         assertEquals(Long.valueOf(3L), t.getT_long());
@@ -169,7 +169,7 @@ public class TestStandardTypes extends TestDatabase {
         assertEquals(new Float(6.1), t.getT_float(), 0.001);
 
         assertEquals(7.2, t.getN_double(), 0.001);
-        assertEquals(new Double(7.2), t.getT_double(), 0.001);
+        assertEquals(Double.valueOf(7.2), t.getT_double(), 0.001);
 
         assertEquals('x', t.getN_char());
         assertEquals(new Character('x'), t.getT_char());
